tests/fixtures/invalid/pow_bytes_str_str.py
# Cannot call pow() with Bytes, Str, Str
x = pow(b"hello", "hello", "hello")
